tests/fixtures/invalid/pow_int_dict_list.py
# Cannot call pow() with Int, Dict[str, int], List[int]
x = pow(1, {"a": 1}, [1, 2, 3])
